# ChangeLog for media-sound/gtklick
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*gtklick-0.6.4 (26 Mar 2013)

  26 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +gtklick-0.6.4.ebuild, +metadata.xml:
  Initial ebuild.
