@@ -1,4 +1,6 @@
+AUX gtklick 791 SHA256 4ba698e90df9c92d5de416ca01319c023d6db44aa35f80c65c50f7f569112b56 SHA512 198c4e8b48745d99bbe768d76cb07c33a664af62eab764d80ec02bcef234f9d6c8a0875ab5036c214dff1d7b5ed20c18cd8f98e32514ef24ade233cc00ed11bf WHIRLPOOL a23935b2755d2e6d28e60ecd8f0451d4bf35c9333bf9f9a82620c7758bc88198ca546c175bb945b12dfa8951de558865d1504175f2302437857e77ac573b4bdd
 DIST gtklick-0.6.4.tar.gz 35901 SHA256 7799d884126ccc818678aed79d58057f8cf3528e9f1be771c3fa5b694d9d0137 SHA512 8491650cf324005f32808036f63574b0a59659bc8e5f3efe615b83e42701f1a3bcb95825a2378b3a17b45ddb5b33c87bed9602a0492d117665d85bd35f4a4a9b WHIRLPOOL de9ceb667910a0968afbf7650942ce1947150c508b76002b5f107fe21c3cf29c5e88462e1494837838cf78502ba5f017b11a834894ba4f21d18d0cbfbf5e46b7
+EBUILD gtklick-0.6.4-r1.ebuild 912 SHA256 6f470a38fa1e9a5deb2273bdeb728688091b4d68a2cc604009a02b14cd281bf6 SHA512 10957295700097d8960f97ba08597e46f24b7c0906bac7e01128258355320fdbbf76f3bb7921ff8d4e0a4fc89cdb58f89327e09535cb9c1b0dea496bf29902d5 WHIRLPOOL da93e2bcecefb155c7756bde5376ca750d793900f21e3d6403ec626c096ccef818a5eb238aa8e6187bc6f3d0bafc880174b02218d88cfd92973cec50c3446af8
 EBUILD gtklick-0.6.4.ebuild 569 SHA256 83895531fdcea86b290fc9ae0ee0e682c8efb0e7d93848989c94ec3416ff3e43 SHA512 7f0556fe3b3b9bd56c8b8c192c4b3988ec57a658805d46c36b97a04d1e58ed4883be5cc7a6f454079e000ad8239d3d263b00e24775d1ac0d39e4ddda4cae1569 WHIRLPOOL b3ab6c1e736245edc8b1376f2a86ddb43ee3774f95faf9789f0dedacca7b6351eb2093384624aedce683354ebc946134e4a97757da389f670e19d5386ada01de
-MISC ChangeLog 274 SHA256 d448bad7063cb39523ea36cd16d47af5c7abd39677cd5789630a0918ba125464 SHA512 d3022fb17a24f50f47741cd481e14b8f42d746679f299010c32c9859efe29daf509d3d1a7e179d93aa1b06ea99da6b05b5051220baacb28e1919d1110939d844 WHIRLPOOL 30b4bc5ddc69d116520e705ad0a8da9ec0c7145a8ca8c21ff59c0d225a61cb89a20a857141b46bfa65aa9507aa1717aa1210b9042712d79d8567b6031069a13f
+MISC ChangeLog 620 SHA256 9a5c3b10438a85e78e061427af94269eeb3b26ddeb9026a18675ecaa3dcad9ef SHA512 f3408fe977a084c19cfbeff84b092e201c7a24212cf4386aff61b845eb2a632be07ab97db89c95cb786e336761f2e0e562dbdf0abee2fe703d0eb753c089e673 WHIRLPOOL 417f81f02a7382ee8013196554a52864e382bb47004e60389102a1b9433fa6ff47f602691b2760d3a5242e9cae43c9eea0782d21999ea51d5484754ba2f776e0
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
