@@ -1,0 +1,23 @@
+#!/usr/bin/env python2
+# -*- coding: utf-8 -*-
+#
+# gtklick
+#
+# This is a replacement for the broken runner script provided by the
+# original source. This script does not assume that the data is in some
+# folder relative to the script, but instead hardcodes the variables
+# during compiling.
+#
+# Copyright (C) 2008-2010  Dominic Sacré  <dominic.sacre@gmx.de>
+# Copyright (C) 2013  Karl Lindén  <lilrc@users.sourceforge.net>
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+
+from gtklick.gtklick import GTKlick
+import sys
+
+app = GTKlick(sys.argv[1:], "@sharedir@", "@localedir@")
+app.run()
